# junkdragon

./: CMakeLists.txt  README.md  instructions.txt
assets/: dragon.png.txt  junkdragon.json  junkdragon.tps  junkdragon_endgame.json  junkdragon_title.json  junkdragon_transition.json  level1.json  level2.json  level3.json
src/: AnimationControllerComponent.cpp  AnimationControllerComponent.hpp  AudioManager.cpp  AudioManager.hpp  BackgroundComponent.cpp  BackgroundComponent.hpp  Box2DDebugDraw.hpp  BurnableComponent.cpp  BurnableComponent.hpp  CameraFollow.cpp  CameraFollow.hpp  Command.hpp  Component.cpp  Component.hpp  DragonController.cpp  DragonController.hpp  EndState.cpp  EndState.hpp  FireBallController.cpp  FireBallController.hpp  FloatTrackComponent.cpp  FloatTrackComponent.hpp  GameObject.cpp  GameObject.hpp  GameState.cpp  GameState.hpp  JunkDragonGame.cpp  JunkDragonGame.hpp  Level.cpp  Level.hpp  MenuOptionComponent.cpp  MenuOptionComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PickUpComponent.cpp  PickUpComponent.hpp  PlayingState.cpp  PlayingState.hpp  SingleVarGuiComponent.cpp  SingleVarGuiComponent.hpp  (+18 more)
